# VoronoiDiagram

./: CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: deploy-emscripten-project.yml
src/: Cone.cpp  Shader.hpp  Vec.hpp  main.cpp  shell_minimal.html
src/include/: Cone.hpp  Counter.hpp  DrawObject.hpp  GeometricTransform.hpp  TransformationMatrix.hpp  Vec.hpp  util.hpp
src/shader/: JFA.frag  Lloyd.frag  cones.frag  cones.vert  draw_texture.frag  drawing.frag  fragment_shader.frag  vertex_shader.vert
test/: util-test.cpp  vec-test.cpp
